--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,78 +1,80 @@
 packageExtensions:
-  typedoc@*:
-    dependencies:
-      "@gjsify/typedoc-theme": "*"
-      "@gjsify/typedoc-plugin-remote-search": "*"
-  "@types/yargs@*":
-    dependencies:
-      "yargs-parser": "*"
-  "@types/koa@*":
-    dependencies:
-      "accepts": "*"
-      "cookies": "*"
-      "events": "*"
-      "http-assert": "*"
-      "keygrip": "*"
-      "koa-compose": "*"
-      "content-disposition": "*"
-      "http-errors": "*"
-  "@types/cookies@*":
-    dependencies:
-      "keygrip": "*"
-      "express": "*"
-      "connect": "*"
-  "@types/express@*":
-    dependencies:
-      "serve-static": "*"
-      "body-parser": "*"
-      "qs": "*"
-  "@types/express-serve-static-core@*":
-    dependencies:
-      "range-parser": "*"
-      "qs": "*"
-      "events": "*"
-  "@types/serve-static@*":
-    dependencies:
-      "mime": "*"
   "@types/body-parser@*":
     dependencies:
-      "connect": "*"
-  "@types/koa-compose@*":
-    dependencies:
-      "koa": "*"
-  "@types/koa-static@*":
-    dependencies:
-      "koa": "*"
-      "koa-send": "*"
-  "@types/koa-send@*":
-    dependencies:
-      "koa": "*"
-  "@types/koa-compress@*":
-    dependencies:
-      "koa": "*"
-  "@types/koa__router@*":
-    dependencies:
-      "koa": "*"
-  "@types/koa__cors@*":
-    dependencies:
-      "koa": "*"
-  "debug@*":
-    dependencies:
-      "supports-color": "*"
+      connect: "*"
   "@types/bootstrap@*":
     dependencies:
-      "jquery": "*"
-  "@types/imagesloaded@*":
+      jquery: "*"
+  "@types/cookies@*":
     dependencies:
-      "jquery": "*"
+      connect: "*"
+      express: "*"
+      keygrip: "*"
   "@types/debug@*":
     dependencies:
-      "ms": "*"
+      ms: "*"
+  "@types/express-serve-static-core@*":
+    dependencies:
+      events: "*"
+      qs: "*"
+      range-parser: "*"
+  "@types/express@*":
+    dependencies:
+      body-parser: "*"
+      qs: "*"
+      serve-static: "*"
+  "@types/imagesloaded@*":
+    dependencies:
+      jquery: "*"
+  "@types/koa-compose@*":
+    dependencies:
+      koa: "*"
+  "@types/koa-compress@*":
+    dependencies:
+      koa: "*"
+  "@types/koa-send@*":
+    dependencies:
+      koa: "*"
+  "@types/koa-static@*":
+    dependencies:
+      koa: "*"
+      koa-send: "*"
+  "@types/koa@*":
+    dependencies:
+      accepts: "*"
+      content-disposition: "*"
+      cookies: "*"
+      events: "*"
+      http-assert: "*"
+      http-errors: "*"
+      keygrip: "*"
+      koa-compose: "*"
+  "@types/koa__cors@*":
+    dependencies:
+      koa: "*"
+  "@types/koa__router@*":
+    dependencies:
+      koa: "*"
+  "@types/serve-static@*":
+    dependencies:
+      mime: "*"
+  "@types/yargs@*":
+    dependencies:
+      yargs-parser: "*"
+  debug@*:
+    dependencies:
+      supports-color: "*"
+  typedoc@*:
+    dependencies:
+      "@gjsify/typedoc-plugin-remote-search": "*"
+      "@gjsify/typedoc-theme": "*"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
-pnpMode: "loose"
+pnpMode: loose
+
+yarnPath: .yarn/releases/yarn-3.2.1.cjs
