Upgrade typedoc, vala-girs and yarn

--- a/package.json
+++ b/package.json
@@ -8,38 +8,38 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "reinstall": "YARN_CHECKSUM_BEHAVIOR=update yarn install",
     "start": "concurrently --kill-others 'yarn:start:gjs' 'yarn:start:node-gtk'",
-    "start:gjs": "yarn run build:gjs && yarn run serve:gjs",
-    "start:node-gtk": "yarn run build:node-gtk && yarn run serve:node-gtk",
-    "start:try:gjs": "yarn run build:docs:try:gjs && yarn run serve:try:gjs",
-    "start:try:node-gtk": "yarn run build:docs:try:node-gtk && yarn run serve:try:node-gtk",
-    "start:gjs:local": "yarn run build:gjs:local && yarn run serve:gjs",
-    "start:node-gtk:local": "yarn run build:node-gtk:local && yarn run serve:node-gtk",
-    "start:try:gjs:local": "yarn run build:docs:try:gjs:local && yarn run serve:try:gjs",
-    "start:try:node-gtk:local": "yarn run build:docs:try:node-gtk:local && yarn run serve:try:node-gtk",
-    "update": "yarn run update:submodules",
+    "start:gjs": "yarn build:gjs && yarn serve:gjs",
+    "start:node-gtk": "yarn build:node-gtk && yarn serve:node-gtk",
+    "start:try:gjs": "yarn build:try:gjs && yarn serve:try:gjs",
+    "start:try:node-gtk": "yarn build:docs:try:node-gtk && yarn serve:try:node-gtk",
+    "start:gjs:local": "yarn build:gjs:local && yarn serve:gjs",
+    "start:node-gtk:local": "yarn build:node-gtk:local && yarn serve:node-gtk",
+    "start:try:gjs:local": "yarn build:try:gjs:local && yarn serve:try:gjs",
+    "start:try:node-gtk:local": "yarn build:docs:try:node-gtk:local && yarn serve:try:node-gtk",
+    "update": "yarn update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
-    "build:types:node-gtk": "yarn run clear:types:node-gtk && NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate '*' -e node --useNamespace --moduleType commonjs --ignoreVersionConflicts",
-    "build:types:try:node-gtk": "NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate GLib-2.0 GObject-2.0 -e node --useNamespace --moduleType commonjs --ignoreVersionConflicts",
-    "build:types:gjs": "yarn run clear:types:gjs && NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate '*' -e gjs --useNamespace --moduleType esm --ignoreVersionConflicts",
-    "build:types:try:gjs": "NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate GLib-2.0 GObject-2.0 -e gjs --useNamespace --moduleType esm --ignoreVersionConflicts",
-    "build:types": "yarn run build:types:gjs && yarn run build:types:node-gtk",
-    "build:docs:node-gtk": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk",
-    "build:docs:try:node-gtk": "yarn run clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk",
-    "build:docs:node-gtk:local": "yarn run clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk:local",
-    "build:docs:try:node-gtk:local": "yarn run clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk:local",
-    "build:docs:gjs": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs",
-    "build:docs:try:gjs": "yarn run clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs",
-    "build:docs:gjs:local": "yarn run clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs:local",
-    "build:docs:try:gjs:local": "yarn run clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs:local",
-    "build:docs": "yarn run build:docs:gjs && yarn run build:docs:node-gtk",
-    "build:docs:local": "yarn run build:docs:gjs:local && yarn run build:docs:node-gtk:local",
-    "build:node-gtk": "yarn run build:types:node-gtk && yarn run build:docs:node-gtk",
-    "build:try:node-gtk": "yarn run build:types:try:node-gtk && yarn run build:docs:try:node-gtk",
-    "build:try:node-gtk:local": "yarn run build:types:try:node-gtk && yarn run build:docs:try:node-gtk:local",
-    "build:gjs": "yarn run build:types:gjs && yarn run build:docs:gjs",
-    "build:try:gjs": "yarn run build:docs:try:gjs",
-    "build:gjs:local": "yarn run build:types:gjs && yarn run build:docs:gjs:local",
-    "build:try:gjs:local": "yarn run build:types:try:gjs && yarn run build:docs:try:gjs:local",
+    "build:types:node-gtk": "yarn clear:types:node-gtk && NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate '*' -e node --package --ignoreVersionConflicts",
+    "build:types:try:node-gtk": "NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate GLib-2.0 GObject-2.0 -e node --package --ignoreVersionConflicts",
+    "build:types:gjs": "yarn clear:types:gjs && NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate '*' -e gjs --package --ignoreVersionConflicts",
+    "build:types:try:gjs": "NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate GLib-2.0 GObject-2.0 -e gjs --package --ignoreVersionConflicts",
+    "build:types": "yarn build:types:gjs && yarn build:types:node-gtk",
+    "build:docs:node-gtk": "yarn clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk",
+    "build:docs:try:node-gtk": "yarn clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk",
+    "build:docs:node-gtk:local": "yarn clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk:local",
+    "build:docs:try:node-gtk:local": "yarn clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk:local",
+    "build:docs:gjs": "yarn clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs",
+    "build:docs:try:gjs": "yarn clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs",
+    "build:docs:gjs:local": "yarn clear:docs:gjs && yarn workspace @gjsify/typedoc-build-docs run build:gjs:local",
+    "build:docs:try:gjs:local": "yarn clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs:local",
+    "build:docs": "yarn build:docs:gjs && yarn build:docs:node-gtk",
+    "build:docs:local": "yarn build:docs:gjs:local && yarn build:docs:node-gtk:local",
+    "build:node-gtk": "yarn build:types:node-gtk && yarn build:docs:node-gtk",
+    "build:try:node-gtk": "yarn build:types:try:node-gtk && yarn build:docs:try:node-gtk",
+    "build:try:node-gtk:local": "yarn build:types:try:node-gtk && yarn build:docs:try:node-gtk:local",
+    "build:gjs": "yarn build:types:gjs && yarn build:docs:gjs",
+    "build:try:gjs": "yarn build:types:try:gjs && yarn build:docs:try:gjs",
+    "build:gjs:local": "yarn build:types:gjs && yarn build:docs:gjs:local",
+    "build:try:gjs:local": "yarn build:types:try:gjs && yarn build:docs:try:gjs:local",
     "build:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
     "build:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run build",
     "build:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run build",
@@ -50,10 +50,10 @@
     "watch:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run watch",
     "watch:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run watch",
     "watch:packages": "concurrently --kill-others 'yarn:watch:packages:*'",
-    "build": "yarn run build:packages",
+    "build": "yarn build:packages",
     "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
     "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
-    "validate": "yarn run validate:gjs && yarn run validate:node-gtk",
+    "validate": "yarn validate:gjs && yarn validate:node-gtk",
     "clear:docs:node-gtk": "rm -rf ./docs/node-gtk",
     "clear:docs:try:node-gtk": "rm -rf ./docs/try-node-gtk",
     "clear:docs:gjs": "rm -rf ./docs/gjs",
@@ -61,7 +61,7 @@
     "clear:docs": "rm -rf ./docs/node-gtk ./docs/gjs ./docs/try-gjs",
     "clear:types:node-gtk": "rm -rf ./@types/node-gtk",
     "clear:types:gjs": "rm -rf ./@types/Gjs",
-    "clear": "yarn run clear:docs",
+    "clear": "yarn clear:docs",
     "serve:node-gtk": "typedoc-server serve ./docs/node-gtk --origin '*'",
     "serve:gjs": "typedoc-server serve ./docs/gjs --origin '*'",
     "serve:try:gjs": "typedoc-server serve ./docs/try-gjs --origin '*'",
@@ -101,6 +101,7 @@
   },
   "workspaces": [
     "packages/*",
+    "@types/*",
     "!vendor/riba",
     "vendor/riba/packages/*",
     "vendor/riba/backend/*",
@@ -142,12 +143,18 @@
     "@ribajs/nest-theme": "workspace:^",
     "@ribajs/yarn-package": "workspace:^",
     "@ribajs/babel-config": "workspace:^",
-    "@ribajs/strapi": "workspace:^"
+    "@ribajs/strapi": "workspace:^",
+    "@ts-for-gir/cli": "portal:../../ts-for-gir/packages/cli",
+    "@ts-for-gir/generator-base": "portal:../../ts-for-gir/packages/generator-base",
+    "@ts-for-gir/generator-html-doc": "portal:../../ts-for-gir/packages/generator-html-doc",
+    "@ts-for-gir/generator-typescript": "portal:../../ts-for-gir/packages/generator-typescript",
+    "@ts-for-gir/lib": "portal:../../ts-for-gir/packages/lib"
   },
-  "packageManager": "yarn@3.2.1",
+  "packageManager": "yarn@3.5.0",
   "dependencies": {
     "@gjsify/typedoc-build-docs": "workspace:^",
     "@gjsify/typedoc-plugin-remote-search": "workspace:^",
+    "@ts-for-gir/cli": "^3.0.0-beta.12",
     "@yarnpkg/esbuild-plugin-pnp": "^3.0.0-rc.9"
   }
 }
