--- a/packages/typedoc-build-docs/tsconfig.node-gtk.json
+++ b/packages/typedoc-build-docs/tsconfig.node-gtk.json
@@ -17,6 +17,6 @@
 		"inlineSources": false,
 		"newLine": "LF"
     },
-	"include": ["../../@types/node-gtk"],
+	"include": ["../../@types/node-*/*.ts"],
 	"exclude": ["../../@types/node-gtk/index.d.ts"]
 }
