--- a/package.json
+++ b/package.json
@@ -18,11 +18,6 @@
     "start:try:node-gtk:local": "yarn build:docs:try:node-gtk:local && yarn serve:try:node-gtk",
     "update": "yarn update:submodules",
     "update:submodules": "git submodule update --init --recursive && git submodule foreach git pull origin master",
-    "build:types:node-gtk": "yarn clear:types:node-gtk && NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate '*' -e node --package --ignoreVersionConflicts",
-    "build:types:try:node-gtk": "NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate GLib-2.0 GObject-2.0 -e node --package --ignoreVersionConflicts",
-    "build:types:gjs": "yarn clear:types:gjs && NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate '*' -e gjs --package --ignoreVersionConflicts",
-    "build:types:try:gjs": "NODE_OPTIONS=\"--max-old-space-size=25600\" ts-for-gir generate GLib-2.0 GObject-2.0 -e gjs --package --ignoreVersionConflicts",
-    "build:types": "yarn build:types:gjs && yarn build:types:node-gtk",
     "build:docs:node-gtk": "yarn clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk",
     "build:docs:try:node-gtk": "yarn clear:docs:try:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:try:node-gtk",
     "build:docs:node-gtk:local": "yarn clear:docs:node-gtk && yarn workspace @gjsify/typedoc-build-docs run build:node-gtk:local",
@@ -33,27 +28,22 @@
     "build:docs:try:gjs:local": "yarn clear:docs:try:gjs && yarn workspace @gjsify/typedoc-build-docs run build:try:gjs:local",
     "build:docs": "yarn build:docs:gjs && yarn build:docs:node-gtk",
     "build:docs:local": "yarn build:docs:gjs:local && yarn build:docs:node-gtk:local",
-    "build:node-gtk": "yarn build:types:node-gtk && yarn build:docs:node-gtk",
-    "build:try:node-gtk": "yarn build:types:try:node-gtk && yarn build:docs:try:node-gtk",
-    "build:try:node-gtk:local": "yarn build:types:try:node-gtk && yarn build:docs:try:node-gtk:local",
-    "build:gjs": "yarn build:types:gjs && yarn build:docs:gjs",
-    "build:try:gjs": "yarn build:types:try:gjs && yarn build:docs:try:gjs",
-    "build:gjs:local": "yarn build:types:gjs && yarn build:docs:gjs:local",
-    "build:try:gjs:local": "yarn build:types:try:gjs && yarn build:docs:try:gjs:local",
-    "build:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run build && NODE_OPTIONS=\"\" npm link",
+    "build:node-gtk": "yarn build:docs:node-gtk",
+    "build:try:node-gtk": "yarn build:docs:try:node-gtk",
+    "build:try:node-gtk:local": "yarn build:docs:try:node-gtk:local",
+    "build:gjs": "yarn build:docs:gjs",
+    "build:try:gjs": "yarn build:docs:try:gjs",
+    "build:gjs:local": "yarn build:docs:gjs:local",
+    "build:try:gjs:local": "yarn build:docs:try:gjs:local",
     "build:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run build",
     "build:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run build",
     "build:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run build",
     "build:packages": "concurrently --kill-others-on-fail 'yarn:build:packages:*'",
-    "watch:packages:ts-for-gir": "cd vendor/ts-for-gjs && NODE_OPTIONS=\"\" npm install && NODE_OPTIONS=\"\" npm run watch && NODE_OPTIONS=\"\" npm link",
     "watch:packages:typedoc-plugin-remote-search": "yarn workspace @gjsify/typedoc-plugin-remote-search run watch",
     "watch:packages:typedoc-theme": "yarn workspace @gjsify/typedoc-theme run watch",
     "watch:packages:typedoc-theme-client": "yarn workspace @gjsify/typedoc-theme-client run watch",
     "watch:packages": "concurrently --kill-others 'yarn:watch:packages:*'",
     "build": "yarn build:packages",
-    "validate:gjs": "tsc --noEmit ./@types/Gjs/*.ts",
-    "validate:node-gtk": "tsc --noEmit ./@types/node-gtk/*.ts",
-    "validate": "yarn validate:gjs && yarn validate:node-gtk",
     "clear:docs:node-gtk": "rm -rf ./docs/node-gtk",
     "clear:docs:try:node-gtk": "rm -rf ./docs/try-node-gtk",
     "clear:docs:gjs": "rm -rf ./docs/gjs",
@@ -143,18 +133,12 @@
     "@ribajs/nest-theme": "workspace:^",
     "@ribajs/yarn-package": "workspace:^",
     "@ribajs/babel-config": "workspace:^",
-    "@ribajs/strapi": "workspace:^",
-    "@ts-for-gir/cli": "portal:../../ts-for-gir/packages/cli",
-    "@ts-for-gir/generator-base": "portal:../../ts-for-gir/packages/generator-base",
-    "@ts-for-gir/generator-html-doc": "portal:../../ts-for-gir/packages/generator-html-doc",
-    "@ts-for-gir/generator-typescript": "portal:../../ts-for-gir/packages/generator-typescript",
-    "@ts-for-gir/lib": "portal:../../ts-for-gir/packages/lib"
+    "@ribajs/strapi": "workspace:^"
   },
   "packageManager": "yarn@3.5.0",
   "dependencies": {
     "@gjsify/typedoc-build-docs": "workspace:^",
     "@gjsify/typedoc-plugin-remote-search": "workspace:^",
-    "@ts-for-gir/cli": "^3.0.0-beta.12",
     "@yarnpkg/esbuild-plugin-pnp": "^3.0.0-rc.9"
   }
 }
