--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,5 @@ jobs:
     - run: yarn install
     - name: Build the packages
       run: yarn run build
-    - name: Build the types and documentation for Zeitgeist
-      run: yarn run build:try
+    - name: Build the types and documentation for Gjs, GObject and GLib
+      run: yarn run build:try:gjs
