--- a/packages/typedoc-theme/package.json
+++ b/packages/typedoc-theme/package.json
@@ -18,6 +18,7 @@
         "assets/*"
     ],
     "devDependencies": {
+        "@gjsify/typedoc-theme-client": "workspace:^",
         "typedoc": "^0.24.8",
         "typescript": "^5.1.3"
     },
